# LibGIST

./: CMakeLists.txt
cmake/: FindFFTW.cmake
include/: gist.h  libgist.h  standalone_image.h
include/clany/: clany_defs.h  clany_macros.h  cmdparser.hpp  eigen.hpp  factory.hpp  file_operation.hpp  point_types.h  timer.hpp  traits.hpp  tstring.h
src/: CMakeLists.txt  gist.cpp  libgist.cpp  main.cpp  standalone_image.cpp
